Fix e-mail form width on mobile

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -280,7 +280,9 @@ footer .body {
 
 .email {
   background-color: white;
-  width: 300px;
+  width: 100%;
+  max-width: 300px;
+  min-width: 110px;
 }
 
 .submit {
